--- a/Project4/components/example/Example.css
+++ b/Project4/components/example/Example.css
@@ -32,3 +32,7 @@ you use won't conflict with these names.
 .cse4050-code-name {
   font-family: Courier New, monospace;
 }
+
+.motto-update {
+  font-size: large;
+}
