--- a/Project4/components/courses/CSECourses.css
+++ b/Project4/components/courses/CSECourses.css
@@ -4,3 +4,31 @@ CSS for the cse4050 project #4 Problem #2 courses component
 Since CSS uses a global name space for classes we should use names starting with
 cse4050-courses- here.
 */
+
+.cse4050-courses-code {
+    font-family: Courier New, monospace;
+    line-height: 1.3;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right: 20px;
+    display: inline-block;
+    box-sizing: border-box;
+    background: #f4f4f4;
+    width: 100%;
+    overflow-x: auto;
+}
+
+.cse4050-courses-output {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    border: 1px dashed #722b00;
+    display: inline-block;
+    box-sizing: border-box;
+}
+
+.motto-update {
+  font-size: large;
+}
